# pe-mappings-generator

./: .gitignore  Cargo.toml  build.gradle.kts  java_home.json  settings.gradle.kts
agent/: build.gradle.kts
agent/src/main/kotlin/me/abhigya/mappinggenerator/: AgentMain.kt  LegacyRegistryInterceptor.kt  RegistryTransformer.kt  Serializer.kt
agent/src/main/kotlin/me/abhigya/mappinggenerator/instrumentation/: ClassHelper.kt  Helper.kt  KVMapper.kt  LegacyRegistryInterceptor.kt  RegistryIdInstrument.kt  RegistryMaterialsInstrument.kt  RegistrySimpleInstrument.kt
agent/src/main/kotlin/me/abhigya/mappinggenerator/instrumentation/legacy/: ClassHelper.kt  LegacyRegistryInterceptor.kt  RegistryIdInstrument.kt  RegistrySimpleInstrument.kt
agent/src/main/kotlin/me/abhigya/mappinggenerator/instrumentation/modern/: ClassHelper.kt  ModernRegistryInterceptor.kt  RegistryMaterialsInstrument.kt
app/src/: main.rs  metadata.rs  utils.rs
src/: download.rs  error.rs  main.rs  metadata.rs  utils.rs  versions.rs
