[package]
name = "pe-mappings-extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pe-mappings-extractor"
path = "app/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"]}
downloader = "0.2.7"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
subprocess = "0.2.9"
futures = "0.3.30"
sha1 = "0.11.0-pre.3"
hex = "0.4.3"
